syntax = "proto3";

option java_package = "com.luxoft.uhg.fabric.proto";
option go_package = "main";
option java_outer_classname = "ClaimAccumulator";

package main;

message Plan {
    string id = 1;
    int32  year = 2;
    map<string, int32>  accumulatorLimits = 3;
    repeated string benefitAdministrators = 4;
    string channelId = 5;
    string sponsor = 6;
}

message Claim {
    string accumulatorId = 1;
    string sourceSystem = 2;
    string sourceClaimId = 3;
    int64  dateOfService = 4;
    int32  amountCents = 5;
    string memberId = 6;
    string planSponsor = 7;
    int32  planYear = 8;
}

message Accumulator {
    string memberId = 1;
    string accumulatorId = 2;
    int32  valueCents = 3;
    int32  planYear = 4;
    string stateHash = 5;
}

message GetAccumulator {
    string memberId = 1;
    string accumulatorId = 2;
    int32 planYear = 3;
}

message GetPlan {
    string memberId = 1;
    int32  planYear = 2;
}

message AddMember {
    string memberId = 1;
    string planId   = 2;
}

message AddClaim {
    Claim claim = 1;
    string StateHash = 2;
}

message AddClaimResponse {
    GetAccumulator accRef = 1;
    bool wasCollision = 2;
    bool wasLimitReached = 3;
}

message Events {
    repeated CollisionDetected collision = 1;
    repeated DeductibleLimitReached limitReached = 2;
}

message CollisionDetected {
    string TxId = 1;
    AddClaim request = 2;
    int32 accumulatorValue = 3;
}

message DeductibleLimitReached {
    string TxId = 1;
    AddClaim request = 2;
    int32 accumulatorValue = 3;
}

message HistoryItem {
    string TxId = 1;
    int32  value = 2;
    int64  timestamp = 3;
    bool   isDelete = 4;
    Claim  claim  = 5;
}

message History {
    repeated HistoryItem history = 1;
    string memberId = 2;
}